complted module 4 solution

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-   <h1>Menu App Solution:</h1>
+   <h1>My Menu App:</h1>
    <ui-view></ui-view>
 
 
@@ -20,7 +20,7 @@
    <script src="src/data/data.module.js"></script>
 
     <!-- Routes -->
-    <script src="src/routes.js"></script>
+    <script src="src/menuapp/routes.js"></script>
 
     <!-- Module MenuApp Artifacts -->
     <script src="src/data/item.component.js"></script>
